--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="btn-line"></div>
             <div class="btn-line"></div>
         </div>
-        <nav>
+        <nav class="menu">
             <ul class="menu-nav">
                 <li class="nav-item">
                     <a href="/" class="nav-link">
