--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
                     rörelsen som driver oss.</p>
             </div>
         </div>
+        <div class="content-boxes">
+            <div class="box-content"></div>
+            <div class="box-content"></div>
+            <div class="box-content"></div>
+        </div>
     </main>
     <footer>
         Virreboi & Calleman
