--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
         <div class="text-container">
             <div class="text-content">
-                <h3>VI ÄR PRIMAL GROUND</h3>
+                <h2>VI ÄR PRIMAL GROUND</h2>
                 <p>Trum- och dansgruppen Primal Ground bildades i 
                     Motala 2010. Sedan 2015 är vi en ideell förening, 
                     inom området Kultur i Motala Kommun. Vi inriktar oss 
@@ -57,12 +57,14 @@
                     samspel med naturen och allt omkring. I grunden är det 
                     kärleken till rytmen och lekfullheten med trummorna och 
                     rörelsen som driver oss.</p>
+                <p>Primal Ground framför Västafrikanska rytmer och danser. 
+                    Vi uppträder, har workshops och spelar på fester och möhippor.</p>
             </div>
         </div>
         <div class="content-boxes">
-            <div class="box-content"></div>
-            <div class="box-content"></div>
-            <div class="box-content"></div>
+            <div class="box-content box-content-1"></div>
+            <div class="box-content box-content-2"></div>
+            <div class="box-content box-content-3"></div>
         </div>
     </main>
     <footer>
