--- a/index.html
+++ b/index.html
@@ -10,36 +10,37 @@
 </head>
 
 <body>
+    <div class="hamburger-menu">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+    </div>
+    <nav class="menu">
+        <ul class="menu-nav">
+            <li class="nav-item current">
+                <a href="/" class="nav-link">
+                    Hem
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/gallery.html" class="nav-link">
+                    Galleri
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/about.html" class="nav-link">
+                    Om oss
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/contact.html" class="nav-link">
+                    Kontakt
+                </a>
+            </li>
+        </ul>
+    </nav>
     <header>
-        <div class="hamburger-menu">
-            <div class="btn-line"></div>
-            <div class="btn-line"></div>
-            <div class="btn-line"></div>
-        </div>
-        <nav class="menu">
-            <ul class="menu-nav">
-                <li class="nav-item">
-                    <a href="/" class="nav-link">
-                        Hem
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/gallery.html" class="nav-link">
-                        Galleri
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/about.html" class="nav-link">
-                        Om oss
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/contact.html" class="nav-link">
-                        Kontakt
-                    </a>
-                </li>
-            </ul>
-        </nav>
+
         <div id="header-text">
             <h1>Primal Ground</h1>
             <p>There is no movement without rhythm</p>
