--- a/index.html
+++ b/index.html
@@ -50,22 +50,31 @@
         <div class="text-container">
             <div class="text-content">
                 <h2>VI ÄR PRIMAL GROUND</h2>
-                <p>Trum- och dansgruppen Primal Ground bildades i 
-                    Motala 2010. Sedan 2015 är vi en ideell förening, 
-                    inom området Kultur i Motala Kommun. Vi inriktar oss 
-                    på traditionella Västafrikanska rytmer och danser, som 
-                    hämtar sin inspiration ur sin kulturs vardag och fest samt 
-                    samspel med naturen och allt omkring. I grunden är det 
-                    kärleken till rytmen och lekfullheten med trummorna och 
+                <p>Trum- och dansgruppen Primal Ground bildades i
+                    Motala 2010. Sedan 2015 är vi en ideell förening,
+                    inom området Kultur i Motala Kommun. Vi inriktar oss
+                    på traditionella Västafrikanska rytmer och danser, som
+                    hämtar sin inspiration ur sin kulturs vardag och fest samt
+                    samspel med naturen och allt omkring. I grunden är det
+                    kärleken till rytmen och lekfullheten med trummorna och
                     rörelsen som driver oss.</p>
-                <p>Primal Ground framför Västafrikanska rytmer och danser. 
+                <p>Primal Ground framför Västafrikanska rytmer och danser.
                     Vi uppträder, har workshops och spelar på fester och möhippor.</p>
             </div>
         </div>
         <div class="content-boxes">
-            <div class="box-content box-content-1"></div>
-            <div class="box-content box-content-2"></div>
-            <div class="box-content box-content-3"></div>
+
+            <div class="box-content box-content-1">
+                <div class="overlay">
+                    <div class="text">Hello World</div>
+                </div>
+            </div>
+            <div class="box-content box-content-2">
+                <div class="overlay"></div>
+            </div>
+            <div class="box-content box-content-3">
+                <div class="overlay"></div>
+            </div>
         </div>
     </main>
     <footer>
