fonts and text placement

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Primal Ground</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Oswald&display=swap" rel="stylesheet">
 
 <body>
     <div class="hamburger-menu">
@@ -66,14 +66,33 @@
 
             <div class="box-content box-content-1">
                 <div class="overlay">
-                    <div class="text">Hello World</div>
+                    <div class="text">
+                        <h3>Workshop</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Alias consequuntur veniam itaque doloremque quibusdam natus 
+                            doloribus deserunt architecto excepturi illum.</p>
+                    </div>
                 </div>
             </div>
             <div class="box-content box-content-2">
-                <div class="overlay"></div>
+                <div class="overlay">
+                    <div class="text">
+                        <h3>Dans</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Alias consequuntur veniam itaque doloremque quibusdam natus 
+                            doloribus deserunt architecto excepturi illum.</p>
+                    </div>
+                </div>
             </div>
             <div class="box-content box-content-3">
-                <div class="overlay"></div>
+                <div class="overlay">
+                    <div class="text">
+                        <h3>Event</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Alias consequuntur veniam itaque doloremque quibusdam natus 
+                            doloribus deserunt architecto excepturi illum.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
