--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Primal Ground</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Oswald|Source+Sans+Pro:200,200i,300,300i,400&display=swap" rel="stylesheet">
+    <script src="https://use.fontawesome.com/094e3d4d5c.js%22%3E"></script>
+        <script src="https://kit.fontawesome.com/383b9a8370.js" crossorigin="anonymous"></script>
+</head>
 
 <body>
     <div class="hamburger-menu">
@@ -41,7 +44,7 @@
     </nav>
     <header>
 
-        <div id="header-text">
+        <div id="header-text" class="filter-text">
             <h1>Primal Ground</h1>
             <p>There is no movement without rhythm</p>
         </div>
@@ -97,7 +100,20 @@
         </div>
     </main>
     <footer>
-        Virreboi & Calleman
+        <div class="footer-content footer-content-1">
+            <h3>EPOST</h3>
+            <a href="mailto:primalground@gmail.com">primalground@gmail.com</a>
+        </div>
+        <div class="footer-content footer-content-2">
+            <h3>TELEFON</h3>
+            <a href="tel:+46708373798">+46708373798</a>
+        </div>
+        <div class="footer-content footer-content-3">
+            <h3>Följ oss på sociala medier</h3>
+            <a href="https://www.facebook.com/PrimalGround/"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/primalgroundrhythm/"><i class="fab fa-instagram"></i></a>
+        </div>
+        <div class="branding">&copy;2020 Primal Ground - Made by Calle Elming & Viktor Johansson</div>
     </footer>
 
     <script src="script.js"></script>
