Added about and contact pages

--- a/about.html
+++ b/about.html
@@ -8,8 +8,9 @@
     <title>Primal Ground</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Oswald|Source+Sans+Pro:200,200i,300,300i,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/094e3d4d5c.js%22%3E"></script>
-        <script src="https://kit.fontawesome.com/383b9a8370.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/383b9a8370.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -20,13 +21,13 @@
     </div>
     <nav class="menu">
         <ul class="menu-nav">
-            <li class="nav-item current">
+            <li class="nav-item">
                 <a href="/" class="nav-link">
                     Hem
                 </a>
             </li>
             
-            <li class="nav-item">
+            <li class="nav-item current">
                 <a href="/about.html" class="nav-link">
                     Om oss
                 </a>
@@ -38,27 +39,24 @@
             </li>
         </ul>
     </nav>
-    <header>
+    <div id="header-about">
 
-        <div id="header-text" class="filter-text">
-            <h1>Primal Ground</h1>
-            <p>There is no movement without rhythm</p>
+        <div id="header-text-about" class="filter-text">
+            <h1>OM OSS</h1>
         </div>
-    </header>
+    </div>
     <main>
         <div class="text-container">
             <div class="text-content">
-                <h2>VI ÄR PRIMAL GROUND</h2>
-                <p>Trum- och dansgruppen Primal Ground bildades i
-                    Motala 2010. Sedan 2015 är vi en ideell förening,
-                    inom området Kultur i Motala Kommun. Vi inriktar oss
-                    på traditionella Västafrikanska rytmer och danser, som
-                    hämtar sin inspiration ur sin kulturs vardag och fest samt
-                    samspel med naturen och allt omkring. I grunden är det
-                    kärleken till rytmen och lekfullheten med trummorna och
-                    rörelsen som driver oss.</p>
-                <p>Primal Ground framför Västafrikanska rytmer och danser.
-                    Vi uppträder, har workshops och spelar på fester och möhippor.</p>
+                <h2>VILKA ÄR VI</h2>
+                    <p>
+                        Trum och dansgruppen Primal Ground har workshops i västafrikansk dans, 
+                        uppvisningar, spelar på personalevents, kick-offs, fester och möhippor.
+                        Vi har även hållt danser på förskolor och skolor, samt El Sistemas aktiviteter.
+                        Medlemmarna har hållt på med västafrikanska rytmer och danser under flera år innan Primal Ground bildades.
+                        Det är rytmernas och dansernas glädje och oemotståndliga energi vi vill dela med oss av genom att erbjuda workshops och uppvisningar!
+                        Vid olika typer av evenemang så är vi ofta flera som trummar och dansar.
+                    </p>
             </div>
         </div>
         
