Added image on about page
Used grid

--- a/about.html
+++ b/about.html
@@ -46,17 +46,20 @@
         </div>
     </div>
     <main>
-        <div class="text-container">
-            <div class="text-content">
-                <h2>VILKA ÄR VI</h2>
-                    <p>
-                        Trum och dansgruppen Primal Ground har workshops i västafrikansk dans, 
-                        uppvisningar, spelar på personalevents, kick-offs, fester och möhippor.
-                        Vi har även hållt danser på förskolor och skolor, samt El Sistemas aktiviteter.
-                        Medlemmarna har hållt på med västafrikanska rytmer och danser under flera år innan Primal Ground bildades.
-                        Det är rytmernas och dansernas glädje och oemotståndliga energi vi vill dela med oss av genom att erbjuda workshops och uppvisningar!
-                        Vid olika typer av evenemang så är vi ofta flera som trummar och dansar.
-                    </p>
+        <div id="text-container-about" class="text-container">
+            <div class="text-container-content-about about-content-1">
+                        <h2>VILKA ÄR VI</h2>
+                            <p>
+                                Trum och dansgruppen Primal Ground har workshops i västafrikansk dans, 
+                                uppvisningar, spelar på personalevents, kick-offs, fester och möhippor.
+                                Vi har även hållt danser på förskolor och skolor, samt El Sistemas aktiviteter.
+                                Medlemmarna har hållt på med västafrikanska rytmer och danser under flera år innan Primal Ground bildades.
+                                Det är rytmernas och dansernas glädje och oemotståndliga energi vi vill dela med oss av genom att erbjuda workshops och uppvisningar!
+                                Vid olika typer av evenemang så är vi ofta flera som trummar och dansar.
+                            </p>
+            </div>
+            <div class="text-container-content-about about-content-2">
+                <img src="/img/Dansoutdoor1.jpg" alt="Dans utomhus">
             </div>
         </div>
         
