fixed responsiveness on about and contact
added different headers

--- a/contact.html
+++ b/contact.html
@@ -39,30 +39,29 @@
             </li>
         </ul>
     </nav>
-    <div id="header-contact">
-
-        <div id="header-text-contact" class="filter-text">
-            <h1>KONTAKT</h1>
-        </div>
-    </div>
+    <div id="header-contact"></div>
     <main>
         <div class="text-container">
             <div class="text-content">
                 <h2>KONTAKTA OSS</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, laborum sit tenetur inventore doloribus nobis. Pariatur error deserunt repudiandae, possimus perferendis maiores adipisci ad minus veniam. Consectetur tenetur sequi rem!
-                        Dolorum obcaecati atque ipsum dolore repellat enim quam alias voluptatibus error, sunt unde, nulla iste delectus maxime voluptate repellendus molestias nihil sit libero nobis quis, voluptas eligendi quos. Ad, numquam.
-                        Error, aliquid. Itaque soluta debitis cupiditate porro magnam quae voluptatum mollitia eveniet laborum, eos temporibus ipsam! Consequuntur, quisquam accusantium! Iste soluta quod neque? Dolorem itaque nulla impedit odio omnis ducimus?
+                        Är du intresserad av att vara med på vår nästa dansworkshop eller trumcirkel? 
+                        Kanske vill du boka oss till ett event som till exempel att spela på en festival, 
+                        kalas, möhippa eller någon annan typ av evenemang. Eller om du har några övriga frågor 
+                        så hör gärna av dig.  
+                    </p>
+                    <p>
+                        Vi tar emot bokningar och frågor både via telefon och epost. 
                     </p>
                     <div class="contact">
                         <p>
-                            Ni kan gärna kontakta oss på telefon <a href="tel:+46708373798">+46708373798</a>
+                            Ni kan gärna kontakta oss på telefon <a href="tel:+46708373798">0708373798</a>
                         </p>
                         <p>
                             Eller så kan ni maila oss <a href="mailto:primalground@gmail.com">primalground@gmail.com</a>
                         </p>
                         <p>
-                            Ni kan även följa oss på sociala medier, där lägger vi upp senaste updateringar och händelser.
+                            Ni kan även följa oss på sociala medier, där lägger vi upp senaste händelser och uppdateringar.
                         </p>
                     </div>
             </div>
