--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="footer-content footer-content-2">
             <h3>TELEFON</h3>
-            <a href="tel:+46708373798">+46708373798</a>
+            <a href="tel:+46708373798">0708373798</a>
         </div>
         <div class="footer-content footer-content-3">
             <h3>Följ oss på sociala medier</h3>
