--- a/contact.html
+++ b/contact.html
@@ -22,18 +22,18 @@
     <nav class="menu">
         <ul class="menu-nav">
             <li class="nav-item">
-                <a href="/" class="nav-link">
+                <a href="index.html" class="nav-link">
                     Hem
                 </a>
             </li>
             
             <li class="nav-item">
-                <a href="/about.html" class="nav-link">
+                <a href="about.html" class="nav-link">
                     Om oss
                 </a>
             </li>
             <li class="nav-item current">
-                <a href="/contact.html" class="nav-link">
+                <a href="contact.html" class="nav-link">
                     Kontakt
                 </a>
             </li>
