--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header>
 
         <div id="header-text" class="filter-text">
-            <h1>Primal Ground</h1>
+            <h1>Pinigt</h1>
             <p>There is no movement without rhythm</p>
         </div>
     </header>
